News UAT/force-app/main/default/objects/Event__x/Event__x.object-meta.xml
<CustomObject>
    <externalDataSource>ARMuat</externalDataSource>
    <externalName>Event</externalName>
    <label>NRM Event</label>
    <pluralLabel>NRM Events</pluralLabel>
</CustomObject>