News UAT/force-app/main/default/objects/Event__x/fields/Account_Number_c__c.field-meta.xml
<CustomField>
    <fullName>Account_Number_c__c</fullName>
    <externalDeveloperName>Account_Number__c</externalDeveloperName>
    <label>Account Number</label>
    <length>15</length>
    <type>Text</type>
</CustomField>