News UAT/force-app/main/default/objects/Event__x/fields/AccountId__c.field-meta.xml
<CustomField>
    <fullName>AccountId__c</fullName>
    <externalDeveloperName>AccountId</externalDeveloperName>
    <label>Company</label>
    <length>18</length>
    <readOnlyProxy>true</readOnlyProxy>
    <referenceTo>Account__x</referenceTo>
    <relationshipLabel>NRM Events</relationshipLabel>
    <relationshipName>NRM_Events</relationshipName>
    <type>ExternalLookup</type>
</CustomField>