News UAT/force-app/main/default/objects/Event__x/fields/Agreement_to_Increase_Yield_c__c.field-meta.xml
<CustomField>
    <fullName>Agreement_to_Increase_Yield_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>Agreement_to_Increase_Yield__c</externalDeveloperName>
    <label>Agreement to Increase Yield</label>
    <type>Checkbox</type>
</CustomField>