News UAT/force-app/main/default/objects/Event__x/fields/Attending_c__c.field-meta.xml
<CustomField>
    <fullName>Attending_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>Attending__c</externalDeveloperName>
    <label>Attending</label>
    <type>Checkbox</type>
</CustomField>