News UAT/force-app/main/default/objects/Event__x/fields/Category_c__c.field-meta.xml
<CustomField>
    <fullName>Category_c__c</fullName>
    <externalDeveloperName>Category__c</externalDeveloperName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Employment</fullName>
            </value>
            <value>
                <fullName>Features</fullName>
            </value>
            <value>
                <fullName>Motoring</fullName>
            </value>
            <value>
                <fullName>National</fullName>
            </value>
            <value>
                <fullName>Newspaper Sales</fullName>
            </value>
            <value>
                <fullName>Online</fullName>
            </value>
            <value>
                <fullName>Real Estate</fullName>
            </value>
            <value>
                <fullName>Retail</fullName>
            </value>
            <value>
                <fullName>Staff</fullName>
            </value>
            <value>
                <fullName>Club</fullName>
            </value>
            <value>
                <fullName>Hospitality</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>