News UAT/force-app/main/default/objects/Event__x/fields/Charge_Type_c__c.field-meta.xml
<CustomField>
    <fullName>Charge_Type_c__c</fullName>
    <externalDeveloperName>Charge_Type__c</externalDeveloperName>
    <label>XXXCharge Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Credit Card (via Chargify)</fullName>
            </value>
            <value>
                <fullName>Bill Customer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>