News UAT/force-app/main/default/objects/Event__x/fields/Client_Visited_c__c.field-meta.xml
<CustomField>
    <fullName>Client_Visited_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>Client_Visited__c</externalDeveloperName>
    <label>Client Visited</label>
    <type>Checkbox</type>
</CustomField>