News UAT/force-app/main/default/objects/Event__x/fields/cmID_c__c.field-meta.xml
<CustomField>
    <fullName>cmID_c__c</fullName>
    <externalDeveloperName>cmID__c</externalDeveloperName>
    <label>cmID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>