News UAT/force-app/main/default/objects/Event__x/fields/Date_Completed_c__c.field-meta.xml
<CustomField>
    <fullName>Date_Completed_c__c</fullName>
    <externalDeveloperName>Date_Completed__c</externalDeveloperName>
    <label>Date Completed</label>
    <type>Date</type>
</CustomField>