News UAT/force-app/main/default/objects/Event__x/fields/Day_of_Week_c__c.field-meta.xml
<CustomField>
    <fullName>Day_of_Week_c__c</fullName>
    <externalDeveloperName>Day_of_Week__c</externalDeveloperName>
    <label>Day of Week</label>
    <length>1300</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>LongTextArea</type>
</CustomField>