News UAT/force-app/main/default/objects/Event__x/fields/DurationInMinutes__c.field-meta.xml
<CustomField>
    <fullName>DurationInMinutes__c</fullName>
    <externalDeveloperName>DurationInMinutes</externalDeveloperName>
    <label>Duration</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>