News UAT/force-app/main/default/objects/Event__x/fields/EndDateTime__c.field-meta.xml
<CustomField>
    <fullName>EndDateTime__c</fullName>
    <externalDeveloperName>EndDateTime</externalDeveloperName>
    <label>End Date Time</label>
    <type>DateTime</type>
</CustomField>