News UAT/force-app/main/default/objects/Event__x/fields/EventSubtype__c.field-meta.xml
<CustomField>
    <fullName>EventSubtype__c</fullName>
    <externalDeveloperName>EventSubtype</externalDeveloperName>
    <label>Event Subtype</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Event</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>