News UAT/force-app/main/default/objects/Event__x/fields/First_Appointment_c__c.field-meta.xml
<CustomField>
    <fullName>First_Appointment_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>First_Appointment__c</externalDeveloperName>
    <label>First Appointment</label>
    <type>Checkbox</type>
</CustomField>