News UAT/force-app/main/default/objects/Event__x/fields/Group_Event_c__c.field-meta.xml
<CustomField>
    <fullName>Group_Event_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>Group_Event__c</externalDeveloperName>
    <label>Group Event</label>
    <type>Checkbox</type>
</CustomField>