News UAT/force-app/main/default/objects/Event__x/fields/GroupEventType__c.field-meta.xml
<CustomField>
    <fullName>GroupEventType__c</fullName>
    <externalDeveloperName>GroupEventType</externalDeveloperName>
    <label>Group Event Type</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>