News UAT/force-app/main/default/objects/Event__x/fields/Hour_Called_c__c.field-meta.xml
<CustomField>
    <fullName>Hour_Called_c__c</fullName>
    <externalDeveloperName>Hour_Called__c</externalDeveloperName>
    <label>Hour Called</label>
    <length>1300</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>LongTextArea</type>
</CustomField>