News UAT/force-app/main/default/objects/Event__x/fields/IsAllDayEvent__c.field-meta.xml
<CustomField>
    <fullName>IsAllDayEvent__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>IsAllDayEvent</externalDeveloperName>
    <label>All-Day Event</label>
    <type>Checkbox</type>
</CustomField>