News UAT/force-app/main/default/objects/Event__x/fields/IsArchived__c.field-meta.xml
<CustomField>
    <fullName>IsArchived__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>IsArchived</externalDeveloperName>
    <label>Archived</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Checkbox</type>
</CustomField>