News UAT/force-app/main/default/objects/Event__x/fields/IsChild__c.field-meta.xml
<CustomField>
    <fullName>IsChild__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>IsChild</externalDeveloperName>
    <label>Is Child</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Checkbox</type>
</CustomField>