News UAT/force-app/main/default/objects/Event__x/fields/Month_End_Date_c__c.field-meta.xml
<CustomField>
    <fullName>Month_End_Date_c__c</fullName>
    <externalDeveloperName>Month_End_Date__c</externalDeveloperName>
    <label>Month End Date</label>
    <type>Date</type>
</CustomField>