News UAT/force-app/main/default/objects/Event__x/fields/owner_c__c.field-meta.xml
<CustomField>
    <fullName>owner_c__c</fullName>
    <externalDeveloperName>owner__c</externalDeveloperName>
    <label>Owner</label>
    <length>1300</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>LongTextArea</type>
</CustomField>