News UAT/force-app/main/default/objects/Event__x/fields/Owner_Department_Picklist_c__c.field-meta.xml
<CustomField>
    <fullName>Owner_Department_Picklist_c__c</fullName>
    <externalDeveloperName>Owner_Department_Picklist__c</externalDeveloperName>
    <label>Owner Department Picklist</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Agency One</fullName>
            </value>
            <value>
                <fullName>Agency Two</fullName>
            </value>
            <value>
                <fullName>Agency Three</fullName>
            </value>
            <value>
                <fullName>Agency Wellington</fullName>
            </value>
            <value>
                <fullName>Agency Mags</fullName>
            </value>
            <value>
                <fullName>Australia</fullName>
            </value>
            <value>
                <fullName>Classifieds</fullName>
            </value>
            <value>
                <fullName>Digital</fullName>
            </value>
            <value>
                <fullName>Direct</fullName>
            </value>
            <value>
                <fullName>Employment</fullName>
            </value>
            <value>
                <fullName>Inserts</fullName>
            </value>
            <value>
                <fullName>Key Accounts</fullName>
            </value>
            <value>
                <fullName>Magazines Direct</fullName>
            </value>
            <value>
                <fullName>Major Retail</fullName>
            </value>
            <value>
                <fullName>Management</fullName>
            </value>
            <value>
                <fullName>Motoring</fullName>
            </value>
            <value>
                <fullName>New Business</fullName>
            </value>
            <value>
                <fullName>Partnerships</fullName>
            </value>
            <value>
                <fullName>Products</fullName>
            </value>
            <value>
                <fullName>Real Estate</fullName>
            </value>
            <value>
                <fullName>Regional</fullName>
            </value>
            <value>
                <fullName>Sections</fullName>
            </value>
            <value>
                <fullName>Simply You</fullName>
            </value>
            <value>
                <fullName>Strategic</fullName>
            </value>
            <value>
                <fullName>Wellington</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>