News UAT/force-app/main/default/objects/Event__x/fields/Package_Type_c__c.field-meta.xml
<CustomField>
    <fullName>Package_Type_c__c</fullName>
    <externalDeveloperName>Package_Type__c</externalDeveloperName>
    <label>XXXPackage Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Full week $26.40 per month</fullName>
            </value>
            <value>
                <fullName>Weekend $8.00 per month</fullName>
            </value>
            <value>
                <fullName>Digital NA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>