News UAT/force-app/main/default/objects/Event__x/fields/RecurrenceDayOfWeekMask__c.field-meta.xml
<CustomField>
    <fullName>RecurrenceDayOfWeekMask__c</fullName>
    <externalDeveloperName>RecurrenceDayOfWeekMask</externalDeveloperName>
    <label>Recurrence Day of Week Mask</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>