News UAT/force-app/main/default/objects/Event__x/fields/RecurrenceEndDateOnly__c.field-meta.xml
<CustomField>
    <fullName>RecurrenceEndDateOnly__c</fullName>
    <externalDeveloperName>RecurrenceEndDateOnly</externalDeveloperName>
    <label>Recurrence End</label>
    <type>Date</type>
</CustomField>