News UAT/force-app/main/default/objects/Event__x/fields/RecurrenceInstance__c.field-meta.xml
<CustomField>
    <fullName>RecurrenceInstance__c</fullName>
    <externalDeveloperName>RecurrenceInstance</externalDeveloperName>
    <label>Recurrence Instance</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>First</fullName>
            </value>
            <value>
                <fullName>Second</fullName>
            </value>
            <value>
                <fullName>Third</fullName>
            </value>
            <value>
                <fullName>Fourth</fullName>
            </value>
            <value>
                <fullName>Last</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>