News UAT/force-app/main/default/objects/Event__x/fields/RecurrenceStartDateTime__c.field-meta.xml
<CustomField>
    <fullName>RecurrenceStartDateTime__c</fullName>
    <externalDeveloperName>RecurrenceStartDateTime</externalDeveloperName>
    <label>Recurrence Start</label>
    <type>DateTime</type>
</CustomField>