News UAT/force-app/main/default/objects/Event__x/fields/RecurrenceType__c.field-meta.xml
<CustomField>
    <fullName>RecurrenceType__c</fullName>
    <externalDeveloperName>RecurrenceType</externalDeveloperName>
    <label>Recurrence Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>RecursDaily</fullName>
            </value>
            <value>
                <fullName>RecursEveryWeekday</fullName>
            </value>
            <value>
                <fullName>RecursMonthly</fullName>
            </value>
            <value>
                <fullName>RecursMonthlyNth</fullName>
            </value>
            <value>
                <fullName>RecursWeekly</fullName>
            </value>
            <value>
                <fullName>RecursYearly</fullName>
            </value>
            <value>
                <fullName>RecursYearlyNth</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>