News UAT/force-app/main/default/objects/Event__x/fields/ReminderDateTime__c.field-meta.xml
<CustomField>
    <fullName>ReminderDateTime__c</fullName>
    <externalDeveloperName>ReminderDateTime</externalDeveloperName>
    <label>Reminder Date/Time</label>
    <type>DateTime</type>
</CustomField>