News UAT/force-app/main/default/objects/Event__x/fields/Revenue_LYTD_c__c.field-meta.xml
<CustomField>
    <fullName>Revenue_LYTD_c__c</fullName>
    <externalDeveloperName>Revenue_LYTD__c</externalDeveloperName>
    <label>Revenue LYTD</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>