News UAT/force-app/main/default/objects/Event__x/fields/ShowAs__c.field-meta.xml
<CustomField>
    <fullName>ShowAs__c</fullName>
    <externalDeveloperName>ShowAs</externalDeveloperName>
    <label>Show Time As</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Busy</fullName>
            </value>
            <value>
                <fullName>OutOfOffice</fullName>
            </value>
            <value>
                <fullName>Free</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>