News UAT/force-app/main/default/objects/Event__x/fields/ShowTimeAs_c__c.field-meta.xml
<CustomField>
    <fullName>ShowTimeAs_c__c</fullName>
    <externalDeveloperName>ShowTimeAs__c</externalDeveloperName>
    <label>Show Time As</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Busy</fullName>
            </value>
            <value>
                <fullName>Out of Office</fullName>
            </value>
            <value>
                <fullName>Free</fullName>
            </value>
            <value>
                <fullName>Tentative</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>