News UAT/force-app/main/default/objects/Event__x/fields/SMAM_Mismatch_c__c.field-meta.xml
<CustomField>
    <fullName>SMAM_Mismatch_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>SMAM_Mismatch__c</externalDeveloperName>
    <label>SMAM Mismatch</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Checkbox</type>
</CustomField>