News UAT/force-app/main/default/objects/Event__x/fields/StartDateTime__c.field-meta.xml
<CustomField>
    <fullName>StartDateTime__c</fullName>
    <externalDeveloperName>StartDateTime</externalDeveloperName>
    <label>Start Date Time</label>
    <type>DateTime</type>
</CustomField>