News UAT/force-app/main/default/objects/Event__x/fields/Subject__c.field-meta.xml
<CustomField>
    <fullName>Subject__c</fullName>
    <externalDeveloperName>Subject</externalDeveloperName>
    <label>Subject</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Relationship/Account Management</fullName>
            </value>
            <value>
                <fullName>New Opportunity</fullName>
            </value>
            <value>
                <fullName>Opportunity Follow Up</fullName>
            </value>
            <value>
                <fullName>Up-sell/cross sell</fullName>
            </value>
            <value>
                <fullName>New Business Prospecting</fullName>
            </value>
            <value>
                <fullName>Copy/Material Follow Up</fullName>
            </value>
            <value>
                <fullName>Bookings Follow Up</fullName>
            </value>
            <value>
                <fullName>Market Appraisals</fullName>
            </value>
            <value>
                <fullName>Re-solicitation</fullName>
            </value>
            <value>
                <fullName>Marketing /Promotion Activity</fullName>
            </value>
            <value>
                <fullName>Client Not Available/No Answer</fullName>
            </value>
            <value>
                <fullName>Cold Call</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Call</fullName>
            </value>
            <value>
                <fullName>Visit</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>