News UAT/force-app/main/default/objects/Event__x/fields/Task_Description_c__c.field-meta.xml
<CustomField>
    <fullName>Task_Description_c__c</fullName>
    <externalDeveloperName>Task_Description__c</externalDeveloperName>
    <label>Task Description</label>
    <type>TextArea</type>
</CustomField>