News UAT/force-app/main/default/objects/Event__x/fields/tmpMobile_c__c.field-meta.xml
<CustomField>
    <fullName>tmpMobile_c__c</fullName>
    <externalDeveloperName>tmpMobile__c</externalDeveloperName>
    <label>tmpMobile</label>
    <length>255</length>
    <type>Text</type>
</CustomField>