News UAT/force-app/main/default/objects/Event__x/fields/tmpPhone_c__c.field-meta.xml
<CustomField>
    <fullName>tmpPhone_c__c</fullName>
    <externalDeveloperName>tmpPhone__c</externalDeveloperName>
    <label>Contact Phone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>