News UAT/force-app/main/default/objects/Event__x/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <externalDeveloperName>Type</externalDeveloperName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sales Call</fullName>
            </value>
            <value>
                <fullName>Sales Visit</fullName>
            </value>
            <value>
                <fullName>Sales Activity</fullName>
            </value>
            <value>
                <fullName>General Interaction</fullName>
            </value>
            <value>
                <fullName>Coaching Call</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>