News UAT/force-app/main/default/objects/Event__x/fields/WhatId__c.field-meta.xml
<CustomField>
    <fullName>WhatId__c</fullName>
    <externalDeveloperName>WhatId</externalDeveloperName>
    <label>Related To ID</label>
    <length>18</length>
    <referenceTo>Account__x</referenceTo>
    <relationshipLabel>NRM Events</relationshipLabel>
    <relationshipName>NRM_Events1</relationshipName>
    <type>ExternalLookup</type>
</CustomField>