News UAT/force-app/main/default/objects/Event__x/fields/YMP_c__c.field-meta.xml
<CustomField>
    <fullName>YMP_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>YMP__c</externalDeveloperName>
    <label>YMP</label>
    <type>Checkbox</type>
</CustomField>