News UAT/force-app/main/default/objects/Event__x/fields/ZCC_Call_Wrapup_2_c__c.field-meta.xml
<CustomField>
    <fullName>ZCC_Call_Wrapup_2_c__c</fullName>
    <externalDeveloperName>ZCC_Call_Wrapup_2__c</externalDeveloperName>
    <label>ZCC_Call Wrapup 2</label>
    <length>50</length>
    <type>Text</type>
</CustomField>