News UAT/force-app/main/default/objects/Event__x/fields/ZCC_Caller_ID_c__c.field-meta.xml
<CustomField>
    <fullName>ZCC_Caller_ID_c__c</fullName>
    <externalDeveloperName>ZCC_Caller_ID__c</externalDeveloperName>
    <label>ZCC_Caller ID</label>
    <type>Phone</type>
</CustomField>