News UAT/force-app/main/default/objects/Event__x/fields/ZCC_QueueID_c__c.field-meta.xml
<CustomField>
    <fullName>ZCC_QueueID_c__c</fullName>
    <externalDeveloperName>ZCC_QueueID__c</externalDeveloperName>
    <label>ZCC_QueueID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>