News UAT/force-app/main/default/objects/Event__x/fields/ZCC_WaitTime_c__c.field-meta.xml
<CustomField>
    <fullName>ZCC_WaitTime_c__c</fullName>
    <externalDeveloperName>ZCC_WaitTime__c</externalDeveloperName>
    <label>ZCC_WaitTime</label>
    <length>50</length>
    <type>Text</type>
</CustomField>